tests/machine/x/ocaml/map_assign.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/map_assign.ml", line 24, characters 39-67:
24 | let scores : (string * int) list ref = ref [("alice",Obj.repr (1))]
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (string * Obj.t) list ref
       but an expression was expected of type (string * int) list ref
       Type Obj.t is not compatible with type int 


Context (around line 24):
  22 | 
  23 | 
  24 | let scores : (string * int) list ref = ref [("alice",Obj.repr (1))]
  25 | 
  26 | let () =
